# OTUS_vertical_upscale

./: CMakeLists.txt  Command.cpp  Command.h  MoveToState.cpp  MoveToState.h  NormalState.cpp  NormalState.h  README.md  State.h  Tests.cpp  ThreadExecutor.cpp  ThreadExecutor.h  main.cpp
.github/workflows/: cmake.yml
